service1-fault-injection.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1-fault
spec:
  hosts:
  - service1.default.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 20
    route:
    - destination:
        host: service1.default.svc.cluster.local
