service1-retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1-retry
spec:
  hosts:
  - service1.default.svc.cluster.local
  http:
  - retries:
      attempts: 20
      perTryTimeout: 5s
      retryOn: connect-failure,5xx
    timeout: 10s
    route:
    - destination:
        host: service1.default.svc.cluster.local

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /service1
    rewrite:
      uri: /service1
    retries:
      attempts: 20
      perTryTimeout: 5s
      retryOn: connect-failure,5xx
    timeout: 10s
    route:
    - destination:
        port:
          number: 80
        host: service1.default.svc.cluster.local
